Global Nav > Research drop down changes. Added new icons to markup. Changes need to be made to formats on Cascade.

--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -87,12 +87,12 @@
                 <li class="has-dropdown"><a href="../../research/index.aspx"><span>Research</span></a>
                 	<div class="subNavLinks last clearfix">
                         <ul>
-                            <li><a class="icon icon-cu-monogram" href="../../research/pre-award/index.aspx">Pre-Award Administration</a></li>
-                            <li><a class="icon icon-cu-monogram" href="../../research/post-award/index.aspx">Post-Award Administration</a></li>
-                            <li><a class="icon icon-cu-monogram" href="../../research/integrity/index.aspx">Research Integrity</a></li>
-                            <li><a class="icon icon-cu-monogram" href="../../research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
-                            <li><a class="icon icon-cu-monogram" href="../../research/office-undergraduate-research-creative-activity/index.aspx">Undergraduate Research and Creative Activity</a></li>
-                            <li><a class="icon icon-cu-monogram" href="../../research/graduate-research/index.aspx">Graduate Research Support</a></li>
+                            <li><a class="icon icon-certificate" href="../../research/pre-award/index.aspx">Pre-Award Administration</a></li>
+                            <li><a class="icon icon-medal" href="../../research/post-award/index.aspx">Post-Award Administration</a></li>
+                            <li><a class="icon icon-clipboard5" href="../../research/integrity/index.aspx">Research Integrity</a></li>
+                            <li><a class="icon icon-library4" href="../../research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
+                            <li><a class="icon icon-lamp8" href="../../research/office-undergraduate-research-creative-activity/index.aspx">Undergraduate Research and Creative Activity</a></li>
+                            <li><a class="icon icon-microscope" href="../../research/graduate-research/index.aspx">Graduate Research Support</a></li>
                         </ul>
                     </div>
                 </li>
