Off-Canvas Nav icons > Converted all SVG images and fonts to inline SVG paths. Markup changes need to be made to formats on Cascade.

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -172,9 +172,11 @@
                         
             <ul class="level-1">
                 <li>
-                    <a class="has-icon the-university" href="/" title="The University">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#cu_window" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                    <a class="has-icon" href="/" title="The University">
+                        <svg class="icon-cu-window" viewBox="0 0 512 512">
+                        <path d="M237.5,263.3L-0.3,501.1V263.3H237.5z M-0.3,248.1V10.3l237.8,237.8H-0.3z M501.3-0.5L263.5,237.3V-0.5H501.3z
+         M248.3,237.3L10.5-0.5h237.8L248.3,237.3L248.3,237.3z M274.3,248.1L512,10.3v237.8H274.3z M512,263.3v237.8L274.3,263.3H512z
+         M248.3,274L10.5,511.8h237.8L248.3,274L248.3,274z M263.5,274v237.8h237.7L263.5,274z"/>
                         </svg>
                         The University
                     </a>
@@ -207,8 +209,8 @@
                 </li>
                 <li>
                     <a class="has-icon" href="/audiences/index.aspx" title="Find information for...">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#user" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-user3" viewBox="0 0 16 16">
+                        <path d="M4 5c0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4s-4-1.791-4-4zM12 10h-8c-2.209 0-4 1.791-4 4v1h16v-1c0-2.209-1.791-4-4-4z"></path>
                         </svg>
                         Find information for...
                     </a>
@@ -234,12 +236,18 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="has-icon icon icon-graduation" href="/academics/degrees-and-programs.aspx" title="Degrees &amp; Programs">Degrees &amp; Programs</a>
+                    <a class="has-icon" href="/academics/degrees-and-programs.aspx" title="Degrees &amp; Programs">
+                        <svg class="icon-graduation" viewBox="0 0 16 16">
+                        <path d="M3 9.177v2.323c0 1 2.239 2.5 5 2.5s5-1.5 5-2.5v-2.323l-5 2.5-5-2.5zM8 2l-8 4 8 4 6.491-3.246-0.491 4.246h1v-4.5l1-0.5-8-4zM8.5 6.225c-0.4 0-0.725-0.325-0.725-0.725s0.325-0.725 0.725-0.725 0.725 0.325 0.725 0.725c0 0.4-0.325 0.725-0.725 0.725z"></path>
+                        </svg>
+                        Degrees &amp; Programs</a>
                 </li>
                 <li>
                     <a class="has-icon" href="/academics/schools-colleges.aspx" title="Schools &amp; Colleges">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#building" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-building" viewbox="0 0 512 512">
+                            <path d="M256,0L0,160h512L256,0z M400,192l16,32v192h64V224l16-32H400z M272,192l16,32v192h64V224l16-32H272z M144,192l16,32v192
+        h64V224l16-32H144z M16,192l16,32v192h64V224l16-32H16z M16,448L0,512h512l-16-64H16z M288,96c0,17.7-14.3,32-32,32s-32-14.3-32-32
+        s14.3-32,32-32S288,78.3,288,96z"/>
                         </svg>
                         Schools &amp; Colleges
                     </a>
@@ -262,16 +270,21 @@
                 
                 <li>
                     <a class="has-icon" href="https://events.chapman.edu/" title="Events">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#calendar" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-calendar" viewbox="0 0 512 512">
+                            <path d="M416,96h-32v64h-96V96h-96v64H96V96H64c-17.6,0-32,14.4-32,32v352c0,17.6,14.4,32,32,32h352c17.6,0,32-14.4,32-32V128
+        C448,110.4,433.6,96,416,96z M128,480H64.1c0,0,0,0-0.1-0.1V416h64V480z M128,384H64v-64h64V384z M128,288H64v-64h64V288z M224,480
+        h-64v-64h64V480z M224,384h-64v-64h64V384z M224,288h-64v-64h64V288z M320,480h-64v-64h64V480z M320,384h-64v-64h64V384z M320,288
+        h-64v-64h64V288z M416,479.9C416,480,416,480,416,479.9l-64,0.1v-64h64V479.9z M416,384h-64v-64h64V384z M416,288h-64v-64h64V288z
+         M160,64c0-8.8-7.2-16-16-16s-16,7.2-16,16v64h32V64z M352,64c0-8.8-7.2-16-16-16s-16,7.2-16,16v64h32V64z"/>
                         </svg>
                         Events
                     </a>
                 </li>
                 <li>
                     <a class="has-icon" href="https://blogs.chapman.edu/" title="Blogs">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#newspaper" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-newspaper" viewbox="0 0 512 512">
+                            <path d="M448,128V64H0v352c0,17.7,14.3,32,32,32h432c26.5,0,48-21.5,48-48V128H448z M416,416H32V96h384V416z M64,160h320v32H64V160
+        z M256,224h128v32H256V224z M256,288h128v32H256V288z M256,352h96v32h-96V352z M64,224h160v160H64V224z"/>
                         </svg>
                         Blogs
                     </a>
@@ -319,16 +332,33 @@
                 </li>
                 <li>
                     <a class="has-icon" href="https://inside.chapman.edu/" title="Inside Chapman">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#cu_monogram" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-monogram" viewbox="0 0 512 512">
+                            <path d="M423,230h89c-0.6-3.9-1.4-11.7-2.5-17.9c-5.5-31.9-16.9-60.1-33-87.4h-86.7v85.8H419C420.7,218.3,422,226.1,423,230
+        L423,230z M304,210.5v-85.8H36.8c-16.1,27.3-27.5,55.9-33,87.8C1.3,226.9,0,241.4,0,256.4c0,15.1,1.3,30.3,3.8,44.6
+        c5.5,31.9,16.9,61.5,33,88.8h87.9v-89.7H94.2c-3.8-15.6-5.9-29.5-5.9-44.8c0-15.3,2.1-29.2,5.9-44.8H304L304,210.5z M419,300.2
+        H214.4v89.7h262.1c16.1-27.3,27.5-57.4,33-89.3c1.1-6.2,1.9-12.1,2.5-19.9h-89C422,288.5,420.7,292.4,419,300.2L419,300.2z
+         M124.7,124.8h11.7V98.9c-3.9-1.6-15.6-4.2-19.5-4.8V52.5c31.2-21,66.3-35.3,105.2-40.8v69c-3.9,0.8-8,1.7-11.8,2.7l-7.7,2v39.4
+        h11.7V93.1c3.9-1,7.4-1.8,11.1-2.6l8.4-1.6V0l-11.9,1.7c-38.7,5.6-76.2,20.3-108.5,42.5l-4.3,3v55.2l7.4,1.6l8.2,2.5
+        C124.7,106.4,124.7,124.7,124.7,124.8L124.7,124.8z M214.4,388.7V210.5h-11.7v215.1l8.1,2c15.3,4.1,31.4,6.2,47.2,6.2
+        c15.8,0,31.3-2.1,46.6-6.2l7.2-2v-35.8H304v28.1c-15.6,3.9-29.9,5.9-44.8,5.9c-14.9,0-29.2-2-44.8-5.9L214.4,388.7L214.4,388.7z
+         M304,93.1v207.1h7.8V85.4l-7.7-2c-3.8-1-7.9-1.9-11.8-2.7v-69c39,5.5,74.1,19.8,105.2,40.8V94c-3.9,0.6-11.7,3.3-15.6,4.8v201.3
+        h7.8V106.4c3.9-1.1,8.7-2.2,10.2-2.5l9.3-1.6V47.1l-5-3C372,21.9,334.6,7.2,295.9,1.7L284.5,0v88.9l8.4,1.6
+        C296.6,91.3,300.1,92.1,304,93.1L304,93.1z M136.4,300.3v-89.8h-11.7v264.7l5.6,2.9C169,500.3,213.3,512,258.1,512
+        c44.8,0,88.4-11.7,127-33.9l4.7-2.9v-85.3H382v79.5c-39,20.7-78.2,32.6-122.8,32.6c-44.6,0-87.7-11.8-122.8-32.6
+        C136.4,469.4,136.4,300.3,136.4,300.3L136.4,300.3z"/>
                         </svg>
                         Inside Chapman
                     </a>
                 </li>
                 <li>
                     <a class="has-icon" href="https://social.chapman.edu/" title="Social">
-                        <svg viewbox="0 0 512 512">
-                            <use xlink:href="//www.chapman.edu/_files/img/omni-nav.svg#chat" xmlns:xlink="http://www.w3.org/1999/xlink"/>
+                        <svg class="icon-chat" viewbox="0 0 512 512">
+                            <path d="M213.3,28.5c117.8,0,213.3,77.3,213.3,172.6s-95.5,172.6-213.3,172.6c-11.3,0-22.4-0.7-33.3-2.1
+        c-45.8,45.6-98.7,53.8-151.6,55v-11.2C57,401.5,80,376.1,80,347.1c0-4-0.3-8-0.9-11.9C30.8,303.6,0,255.3,0,201.1
+        C0,105.8,95.5,28.5,213.3,28.5z M442.7,415.4c0,24.9,16.1,46.6,40.9,58.6v9.6c-45.8-1-87.9-8-127.6-47.2c-9.4,1.2-19,1.8-28.8,1.8
+        c-42.4,0-81.5-11.4-112.7-30.7c64.3-0.2,125-20.8,171-58.1c23.2-18.8,41.5-40.8,54.4-65.5c13.7-26.2,20.6-54,20.6-82.8
+        c0-4.6-0.2-9.3-0.6-13.8c32.3,26.6,52.1,62.9,52.1,102.9c0,46.4-26.7,87.9-68.6,115C442.9,408.5,442.7,411.9,442.7,415.4
+        L442.7,415.4z"/>
                         </svg>
                         Social
                     </a>
