2 and 3 column 768 updates

--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -4,10 +4,14 @@
   border: 1px solid #c1c1c1;
   line-height: 20px;
   margin: 0 0 20px 0;
-  width: 195px;
+  width: 100%;
   position: relative;
   @include bp(l) {
     width: 100%;
+  }
+
+  @include media($large-screen) {
+    width: 195px;
   }
 
   .editableContent, h2 {
