--- a/app/views/widgets/primary_content/_a_to_z_anchors.html
+++ b/app/views/widgets/primary_content/_a_to_z_anchors.html
@@ -17,7 +17,7 @@
 
       <a href="#Z" title="Jump to the key services and departments that begin with the letter #Z">Z</a>
     </div>
-  <div>
+  </div>
 
   <div class="letterBlock">
     <h2 class="letter" id="A">A</h2>
