--- a/app/assets/stylesheets/layout_old/middle-right-container.scss
+++ b/app/assets/stylesheets/layout_old/middle-right-container.scss
@@ -1,8 +1,15 @@
 .middleRightContainer {
-  @include bp(l) {
-  	width: 73%;
-	  position: relative;
-	  float: right;
-	  @include vendorize(box-sizing, border-box);
+  text-align: left;
+
+  @include media($medium-screen) {
+    position: relative;
+    float: right;
+    @include vendorize(box-sizing, border-box);
+  }
+
+  @include media($large-screen) {
+    display: inline-block;
+    float: none;
+    width: 55%;
   }
 }
