--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -1,6 +1,8 @@
 .rightColumn {
   margin: 0 0 10px 0;
   padding-top: $base-spacing;
+  text-align: left;
+
   @include bp(l) {
     padding-top: 0;
   }
@@ -16,9 +18,6 @@
     img {
       width: 100%;
       max-width: 206px;
-    }
-    @include bp(wildcard-max, 780px) {
-      margin-left: 10px;
     }
   }
   .styleOne {
@@ -75,11 +74,12 @@
       margin-top: 0;
     }
   }
-  @include bp(l) {
-    width: 25%;
+  @include media($large-screen) {
     position: relative;
+    display: inline-block;
     float: right;
-    padding-right: 0;
+    width: auto;
     margin-top: 45px;
+    padding-right: 0;
   }
 }
