2 and 3 column 1024 update

--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -2,11 +2,12 @@
 
 <%= render 'widgets/shared/omninav' %>
 
-    <div class="maxWidth">
-        <nav class="mainNav"><a class="logo" href="../../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization" title="Chapman University Website Home Page"><span itemprop="name">Chapman University</span></a>
+    <div class="main-nav-container">
+        <nav class="mainNav">
             <div class="mainNavExpand"><a href="javascript:;">
                 Menu <span class="arrow">&#160;</span></a>
             </div>
+            
             <ul class="mainNavLinks" id="mainNavLinks">
                 <li class="has-dropdown"><a class="first" href="../../about/index.aspx"><span>About</span></a>
                     <div class="subNavLinks clearfix">
