--- a/app/assets/stylesheets/components/main_navigation.scss
+++ b/app/assets/stylesheets/components/main_navigation.scss
@@ -1,5 +1,14 @@
 
 /* The Container of the main navigation element */
+.main-nav-container {
+  width: 100%;
+  display: none;
+
+  @include media($large-screen) {
+    display: block;
+  }
+}
+
 .mainNav {
   @include clearfix;
 }
@@ -81,6 +90,7 @@
 }
 
 .mainNavLinks {
+  background-color: $black;
   display: none;
   .open & { display: block; }
 
@@ -335,14 +345,8 @@
   }
   @include bp(m) {
     display: block;
-
-    background-color: $grey;
-    background-image: image-url('ribbon_tails.png');
-    background-repeat: no-repeat;
-    background-position: -2px 0;
     width: 100%;
     height: 45px;
-    padding: 0 0 0 10px;
     margin: 10px 0 0 0;
     float: left;
     position: relative;
