--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -31,6 +31,7 @@
         max-width: 100%;
         width: 100%;
         @include vendorize(box-sizing, border-box);
+        margin: 0px;
       }
     }
     &.calendar .main {
@@ -74,7 +75,7 @@
     width: 100%;
     margin: 0;
     @include bp(l) {
-      margin: 0 10px;
+      margin: 0px;
     }
     @include vendorize(box-sizing, border-box);
     &.profile {
