--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -76,7 +76,7 @@
         <p itemprop="telephone">(714) 997-6815</p>
       </div>
       <div class="address">
-        <p class="addr-name">Rinker Health Sciences Campus</p>
+        <p class="addr-name">Rinker Health Science Campus</p>
         <p itemprop="streetAddress">9401 Jeronimo Road</p>
         <p>
           <span itemprop="addressLocality">Irvine, </span>
