--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -78,7 +78,7 @@
     position: relative;
     display: inline-block;
     float: right;
-    width: auto;
+    width: 20%;
     margin-top: 45px;
     padding-right: 0;
   }
