Minor fixes to omninav sample page.

--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -56,8 +56,9 @@
         Omninav library.
       </p>
 
-      <h4>Table Issue</h4>
+      <h3>Table Issue</h3>
       <p>See <a href="https://github.com/chapmanu/cascade-assets/issues/203">Github Issue #203</a></p>
+      <p>Feel free to remove this in the future.</p>
 
       <table border="1" cellpadding="5" style="width: 100%; border-color: #313131; border-width: 1px; border-style: solid;">
         <tbody>
