updated law school template

--- a/app/assets/stylesheets/layout_old/admission/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/admission/primary-content.scss
@@ -2,6 +2,7 @@
   max-width: none !important;
   width: 100%;
   .featureImage {
+    display: inline-block;
     float: left;
     margin: 0px 20px 10px 0;
     //border: 1px solid #c1c1c1;
