--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -191,11 +191,12 @@
     }
 
     .links-header {
-      padding: 11.5px 16px;
+      padding: 10px 16px;
       background-color: $black;
 
       h3 {
         margin: 0;
+        font-size: 18px;
         font-weight: 100;
         color: white;
         text-transform: uppercase;
