--- a/app/views/_cascade/blocks/html/_law_footer.html
+++ b/app/views/_cascade/blocks/html/_law_footer.html
@@ -1,5 +1,5 @@
     <br style="clear: both;"/>
-    <footer class="footer clearfix">
+    <footer class="law-footer clearfix">
         <div class="maxWidth">
             <div class="footer-info">
                 <div class="weather clearfix">
