--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -3,6 +3,7 @@
 <%= render 'widgets/shared/omninav' %>
 
     <div class="main-nav-container">
+        <a class="logo" href="../../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization"><span itemprop="name">Chapman University</span></a>
         <nav class="mainNav">
             <div class="mainNavExpand"><a href="javascript:;">
                 Menu <span class="arrow">&#160;</span></a>
