--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -200,6 +200,7 @@
         font-weight: 100;
         color: white;
         text-transform: uppercase;
+        font-family: "futura-pt", sans-serif;
       }
     }
 
