--- a/app/assets/stylesheets/layout_old/law-navigation.scss
+++ b/app/assets/stylesheets/layout_old/law-navigation.scss
@@ -62,6 +62,7 @@
 
   .logo {
     display: block;
+    float: none;
     height: 38px;
     width: 200px;
     text-indent: -999em;
@@ -74,12 +75,16 @@
 
     @include bp(m) {
       margin-bottom: 0;
-      float: left;
       display: block;
       position: static;
       height: 38px;
       width: 200px;
     }
+
+    @include bp(l){
+      float: left;
+    }
+
     @media (min-width: 1120px) {
       margin: 3px 20px 0 0;
     }
