Adds caption to modular two-column masthead.

--- a/app/views/_cascade/formats/level/_masthead.erb
+++ b/app/views/_cascade/formats/level/_masthead.erb
@@ -38,6 +38,9 @@ showBoxes = 'Yes'
     <div class="grid">
       <div class="column image">
         <img alt="<%= brandedNewAltText %>" src="<%= brandedNewImagePath %>"/>
+        <div class="photo-by">
+          A hard-coded caption!
+        </div>
       </div>
       <div class="column header theme-bg-color">
         <h2 class="header"><%= brandedNewHeader %></h2>
