--- a/app/assets/stylesheets/regions/mastheads/branded-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/branded-masthead.scss
@@ -11,6 +11,8 @@
     @include media($medium-screen) { display: table; }
 
     .column {
+      position: relative;
+
       @include media($medium-screen) {
         display: table-cell;
       }
@@ -28,6 +30,16 @@
           @include media($medium-screen) { max-height: 280px; }
 
           @include media($large-screen) { max-height: 400px; }
+        }
+
+        div.photo-by {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          padding: 16px;
+          font-size: 16px;
+          color: $white;
+          background-color: rgba(56,56,56,0.70);
         }
       }
 
