Adds mobile nav region.

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -7,7 +7,7 @@
 // Old page layout styles
 @import "layout_old/**/*";
 
-//styles for 
+// Styles for regions
 @import "regions/**/*";
 
 // Styles for officially supported modular widgets
