Tweaks mobile nav button styles. Adds mobile nav region to 3-column layout.

--- a/app/views/layouts/2_column.html.erb
+++ b/app/views/layouts/2_column.html.erb
@@ -32,6 +32,8 @@
 
                     <div class="primaryContent clearfix twoColumns">
 
+                        <%= render 'regions/mobile_nav' %>
+
                         <div class="breadcrumbs clearfix">
                             <%= render 'widgets/shared/breadcrumbs' %>
                             <%= render 'widgets/shared/social_media_icons' %>
