--- a/app/assets/stylesheets/regions/mobile-nav.scss
+++ b/app/assets/stylesheets/regions/mobile-nav.scss
@@ -7,6 +7,7 @@ div#mobile-nav {
   }
 
   a.button {
+    width: 100%;
     font-size: 14px;
     font-family: futura-pt, sans-serif;
     font-weight: bold;
@@ -14,6 +15,7 @@ div#mobile-nav {
     background-color: inherit;
     border: 2px solid $red;
     text-transform: uppercase;
+    text-align: center;
   }
 
   a.button:hover {
