set width so buttons stay stacked like in design, overrides width: 100% default
all other behavior is unchanged, for other buttons and for all other
screen sizes < 1250px

--- a/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
+++ b/app/assets/stylesheets/widgets/home_page/graduate_admission.scss
@@ -73,6 +73,8 @@
 @media only screen and (min-width: 1250px) {
   #graduateAdmission { 
     .actions {
+      // hardcoded width so buttons stay stacked in desktop view instead of 100%
+      width: 470px;
       margin-left: 50px;
     }
   }
