explicitly specifies `overflow: hidden` property, default was causing issue
see issue #212

--- a/app/assets/stylesheets/components/callout.scss
+++ b/app/assets/stylesheets/components/callout.scss
@@ -6,6 +6,7 @@
   margin: 0 0 20px 0;
   width: 100%;
   position: relative;
+  overflow: hidden;
 
   .editableContent, h2 {
     padding: 0 $base-spacing;
